<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FeatureDetectorExample</string>
    <string name="app_title">MatrixRDT</string>
    <string name="start_help">Choose an option below to begin</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_selection">Select Image</string>
    <string name="camera">Take Picture</string>
    <string name="analyze">Please Wait. Analyzing Image&#8230;</string>
    <string name="results_title">Test Results</string>
	<string name="test_label">Test Type</string>
	<string name="results_label">Diagnosis</string>
	<string name="positive_result">POSITIVE</string>
	<string name="negative_result">Negative</string>
	<string name="error_result">Error</string>
	<string name="test_1">Test 1:</string>
	<string name="test_2">Test 2:</string>
	<string name="test_3">Test 3:</string>
	<string name="test_4">Test 4:</string>
	<string name="test_5">Test 5:</string>
	<string name="test_6">Test 6:</string>
	<string name="test_7">Test 7:</string>
	<string name="test_8">Test 8:</string>
	<string name="empty">---</string>
</resources>